# tree-sitter-veryl

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  flake.nix  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
.direnv/: flake-profile-1-link
bindings/go/: binding_test.go
bindings/node/: index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_veryl/: __init__.py
bindings/rust/: build.rs  lib.rs
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
